--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
+.show{
+    animation: downtoup 0.5s ease-out 0s  forwards;
+}
+
+.showd{
+    animation: downtoup 0.7s ease-out 0.2s  forwards;
+}
+.showd1{
+    animation: downtoup 0.7s ease-out 0.4s  forwards;
+}
+.showd2{
+    animation: downtoup 0.7s ease-out 0.5s  forwards;
+}
+.showd3{
+    animation: downtoup 0.7s ease-out 0.6s  forwards;
+}
+
+@keyframes downtoup {
+    from{
+        /* opacity: 0; */
+        filter: blur(2px);
+        transform: translateY(100px);
+    }
+    to{
+        opacity: 1;
+        filter: blur(0px);
+        transform: translateY(0px);
+    }
+}
